package Modules.Mbo;

public class BlockInfo {
	
	private char section;
	private int number;
	private double length;
	private double grade;
	private int speedLimit;
	private String infrastructure;
	private double elevation;
	private double cumulativeElevation;

	// TODO write the constructor and getters/setters

	public BlockInfo() {

	}
}